noinst_LIBRARIES = libarmaddr.a
libarmaddr_a_SOURCES = dp_addr10.c dp_addr11.c dp_addr1.c dp_addr2.c dp_addr3.c dp_addr4.c dp_addr5.c dp_addr6.c dp_addr7.c dp_addr8.c dp_addr9.c ls_addr1.c ls_addr2.c ls_addr3.c ls_addr4.c ls_addr5.c ls_addr6.c ls_addr7.c ls_addr8.c ls_addr9.c lsc_addr1.c lsc_addr2.c lsc_addr3.c lsc_addr4.c lsm_addr1.c lsm_addr2.c lsm_addr3.c lsm_addr4.c mls_addr1.c mls_addr2.c mls_addr3.c mls_addr4.c mls_addr5.c mls_addr6.c
AM_CFLAGS = -I@top_srcdir@/include/
